change to baiyueheiyu

--- a/index_redirect.html
+++ b/index_redirect.html
@@ -90,9 +90,9 @@
 
 
 
-        <div class="block1" id="custpub" onclick="window.location.href = '//www.python3.vip' ">
+        <div class="block1" id="custpub" onclick="window.location.href = '//www.baiyueheiyu.com' ">
          
-            <p class="content1">白月黑羽网站迁入 python3.vip,点击访问</p>
+            <p class="content1">白月黑羽网站迁入 baiyueheiyu.com,点击访问</p>
        </div>
 
       
